# inmor

./: .editorconfig  .gitignore  .readthedocs.yaml  CHANGELOG.md  Cargo.toml  Dockerfile  README.md  docker-compose.yml  justfile  pyproject.toml  rootCA.pem  taconfig.toml
admin/: Dockerfile  db.json  docker-entrypoint.sh  historical_keys  manage.py  privatekeys  publickeys  pyproject.toml  requirements-dev.txt  spec.md
admin/api_demo/: README.md  demo.py
admin/api_demo/data/: fakerp0_key.json  fakerp0_metadata_without_key.json
admin/apikeys/: admin.py  models.py
admin/apikeys/management/commands/: apikey.py  create_api_key.py
admin/apikeys/migrations/: 0001_initial.py  0002_add_tenant_field.py
admin/auditlog/: admin.py  diff.py  helpers.py  models.py
admin/auditlog/migrations/: 0001_initial.py
admin/common/: mfa_adapter.py  signing.py
admin/entities/: lib.py  models.py  urls.py
admin/entities/management/commands/: pre_migrate_check.py  readd_subordinates.py  regenerate_entity.py  renew_subordinates.py  setup_admin.py
admin/entities/migrations/: 0001_initial.py  0002_subordinate_additional_claims.py  0003_subordinate_metadata_jsonfields.py
admin/frontend/: .dockerignore  Dockerfile  localhost_2026-01-18_11-19-43.report.html  nginx.conf  package.json  pnpm-lock.yaml  vite.config.ts
admin/frontend/src/: App.vue  main.ts  routes.ts  vite-env.d.ts
admin/frontend/src/components/: TrustMarkTypesList.vue
admin/frontend/src/components/base/: Badge.vue  Button.vue  DataTable.vue  Heading.vue  Icon.vue  Input.vue  JsonEditor.vue  Modal.vue  Toggle.vue
admin/frontend/src/components/site/: Layout.vue  Sidebar.vue
admin/frontend/src/lib/admin-sdk/: errors.ts  index.ts  resources.ts  sdk.ts
admin/frontend/src/styles/: global.css  variables.css
admin/frontend/src/types/: global.d.ts
admin/frontend/src/views/: HomeView.vue  LoginView.vue  SubordinatesView.vue  TrustMarkTypesView.vue  TrustMarksView.vue
admin/inmoradmin/: api.py  auth.py  localsettings.py  settings.py  urls.py
admin/templates/account/: base.html  login.html  logout.html
admin/templates/admin/: base_site.html
admin/templates/mfa/: authenticate.html  index.html  reauthenticate.html
admin/templates/mfa/recovery_codes/: generate.html  index.html
admin/templates/mfa/totp/: activate_form.html  deactivate_form.html
admin/templates/mfa/webauthn/: add_form.html  authenticator_confirm_delete.html  authenticator_list.html  edit_form.html
admin/tests/: conftest.py  test_api.py  test_apikeys.py  test_auditlog.py  test_auth.py  test_entitylib.py  test_mfa_encryption.py  test_signing.py
admin/tests/data/: fakerp0_metadata.json
admin/trustmarks/: lib.py  models.py  urls.py  views.py
admin/trustmarks/management/commands/: reissue_alltms.py  reload_issued_tms.py
admin/trustmarks/migrations/: 0001_initial.py  0002_trustmark_additional_claims.py  0003_trustmarktype_valid_for_alter_trustmarktype_tmtype.py
admin/typings/django_redis/client/: default.pyi
changelog.d/: 20251119_130951_kushal_smaller_points.md  20251125_143528_kushal_expiry_in_hours.md  20251127_194428_kushal_ref_and_other_claims.md  20251201_103733_kushal_remove_tm_from_redis.md  20251202_112427_kushal_remove_tm_from_redis.md  20251202_115518_kushal_all_endpoints.md  20251202_141142_kushal_update_entity_test_api.md  20251208_092003_kushal_verify_renewal.md  20251217_102809_kushal_keys.md  20251217_130038_kushal_tm_for_ta.md  20251217_140528_kushal_check_tm_in_list.md  20251218_101731_kushal_forced_metadata.md  20251219_140253_kushal_all_different_keys.md  20251219_145215_kushal_unwraps.md  20251220_055603_kushal_tls_and_on_spec.md  20251222_091204_kushal_historical.md  20251222_100934_kushal_check_authority.md  20260108_142521_kushal_move_historical_keys.md  20260116_165352_kushal_frontend.md  20260116_165859_kushal_frontend.md  20260211_114938_kushal_record.md  20260212_111015_kushal_refetch.md  20260213_092621_kushal_refetch.md  20260213_100720_kushal_metadata_null.md  20260213_134606_kushal_fix_collections.md  20260217_133643_kushal_ta_and_subs.md  20260224_101155_kushal_for_new_release.md  20260225_142759_kushal_fix_185.md  20260407_142947_kushal_jwks_uri.md
dev/: docker-compose.dev.yml  localhost+2-key.pem  localhost+2.pem
docs/: conf.py  configuration.rst  deployment.rst  index.rst  installation.rst  reverse-proxy.rst
historical_keys/: 5RmZ0dJYzWYHNkG2mdOU6e-pPSucOcTg8_utbJxqKp4.json  j70psMhRU24mNbHDHHt2cFFYmlpTdu72XdPs-TLTISg.json
privatekeys/: 8ileczz9EZXeWfe1DSlVTP7bNXRufz2tlSRxDIns8xk.json  HXQZScGT7u-m98zU6WXcvKKcLmeJaIhrKqbvb8Afu5M.json  NR6qCbSKL6qk9QqaCNB3x009ef30jGhQoaOS2epo_q8.json  STP5GC6xBrrIBiKNkaPZ6f-5Y3lwUrH_O5uD5cwMzJI.json  XyGEk-7DRB8jQIy2oE9LfqF12-Uj2Z7bvPCKTJzZSG4.json  eVQV6Ci1ZEJgy8YUpMuLoyDd0y5bc5GaiqFaAFYyc9Y.json  zVhquwe6K_h8iDkBm6BJt0P7vAxcqjoJN_sbU8_jpaY.json
publickeys/: 8ileczz9EZXeWfe1DSlVTP7bNXRufz2tlSRxDIns8xk.json  HXQZScGT7u-m98zU6WXcvKKcLmeJaIhrKqbvb8Afu5M.json  NR6qCbSKL6qk9QqaCNB3x009ef30jGhQoaOS2epo_q8.json  (+4 more)
src/: lib.rs  (+1 more)
(+34 files in other folders)
