[package]
name = "inmor"
version = "0.2.0"
edition = "2024"

[dependencies]
actix-web = { version = "4.10.2", features = ["rustls-0_23"] }
josekit = "0.10.3"
redis = { version = "0.30.0",  features = ["tokio-comp", "connection-manager"] }
serde = "1.0.219"
serde_json = "1.0.140"
config = "0.15.11"
lazy_static = "1.5.0"
reqwest = { version = "0.12.15", features = ["blocking"] }
actix-web-lab = "0.24.1"
tokio = { version = "1", features = ["full"] }
env_logger = "0.11.8"
log = "0.4.27"
base64 = "0.22"
oidfed_metadata_policy = "0.7.0"
anyhow = "1.0.98"
toml = "0.9.0"
clap = { version = "4.5.41", features = ["derive"] }
ureq = { version = "*", features = ["json", "native-tls"], default-features = false }
sha2 = "0.10.9"
rustls = "0.23"
rustls-pemfile = "2.2"
