[project]
name = "pyinmor"
authors = [{name = "Kushal Das", email = "kushal@sunet.se"}]
version = "0.1.2"
description = "Inmor Trust Anchor"
license = { file="LICENSE" }
requires-python = '>=3.13'

dependencies = [
	"jwcrypto",
	"httpx",
	"redis",
	"port-for",
	"pytest-redis",
	"pytest",
	"python-dotenv",
	"pytest-dotenv",
	"ruff",
	"scriv",
]

[project.urls]
Home = "https://github.com/SUNET/inmor"

[tool.pyright]
stubPath = "typings"
reportAny = false
reportUnknownMemberType = false
reportUnknownVariableType = false
reportUnknownArgumentType = false
reportUnannotatedClassAttribute = false
reportExplicitAny = false
reportImplicitOverride = false
reportUninitializedInstanceVariable = false

[tool.ruff]
line-length = 100
exclude = [
    "db",
    "redis",
    ".direnv",
    ".eggs",
    ".git",
    ".git-rewrite",
    ".hg",
    ".ipynb_checkpoints",
    ".mypy_cache",
    ".nox",
    ".pants.d",
    ".pyenv",
    ".pytest_cache",
    ".pytype",
    ".ruff_cache",
    ".svn",
    ".tox",
    ".venv",
    ".vscode",
    "__pypackages__",
    "_build",
    "buck-out",
    "build",
    "dist",
    "node_modules",
    "site-packages",
    "venv",
    "django_redis",
]

[tool.ty.src]
exclude = [
    "db",
]

[tool.pytest.ini_options]
testpaths = "tests"
pythonpath = ["."]

[tool.scriv]
version = "literal: pyproject.toml: project.version"
format = "md"
